--- a/styles.css
+++ b/styles.css
@@ -1,249 +1,304 @@
-body{
-  color: #000;
-  background-color: #f1f1f1;
-
-}
-html,body{
-  font-size: 15px;
-  line-height: 1.5;
-}
-html,body,h1,h2,h3,h4,h5,h6{
-  font-family: "Roboto", sans-serif;
-}
-.container{
-   margin: 16px 16px;
-   background-color: #fff;
-   box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19);
+body {
+    color: #000;
+    background-color: #f1f1f1;
 }
 
-.information-card{
-  width: 22%;
-  background-color: #fff;
-  margin-bottom: inherit;
-  float: left;
-  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19);
-  box-sizing: inherit;
-  line-height: 18px;
-}
-img{
-  width: 100%;
-}
-.information{
-  font-size: 15px !important;
-  color: #757575 !important;
-  background-color: #fff !important;
-  padding: 0.01em 16px;
-  margin-bottom: 15px;
-  line-height: 18px;
-
-}
-hr{
-  border-top: 1px solid #eee;
-  margin: 20px 0;
-  height: 0;
-  overflow: visible;
-}
-.title{
-  font-size: 1.33333em;
-  font-weight: bold;
-}
-.background-percent{
-  color: #000 !important;
-  background-color: lightgray;
-  border-radius: 16px;
-}
-.html-css{
-  width: 90%;
-  background-color: #009688;
-  color: #fff !important;
-  border-radius: 16px;
-  text-align: center;
-}
-.c{
-  width: 80%;
-  background-color: #009688;
-  color: #fff !important;
-  border-radius: 16px;
-  text-align: center;
-}
-.mysql{
-width: 80%;
-background-color: #009688;
-color: #fff !important;
-border-radius: 16px;
-text-align: center;
-}
-.java{
-  width: 75%;
-  background-color: #009688;
-  color: #fff !important;
-  border-radius: 16px;
-  text-align: center;
-}
-.php{
-width: 60%;
-background-color: #009688;
-color: #fff !important;
-border-radius: 16px;
-text-align: center;
-}
-.python{
-  width: 50%;
-  background-color: #009688;
-  color: #fff !important;
-  border-radius: 16px;
-  text-align: center;
-}
-.language-greek{
-  width: 100%;
-  height: 18px;
-  border-radius: 16px;
-  background-color: #009688 !important;
-  line-height: 18px;
-}
-.language-english{
-  width: 75%;
-  height: 18px;
-  border-radius: 16px;
-  background-color: #009688 !important;
-
-}
-.info{
-  color: #009688;
-  font-size:  20px !important;
-  padding-left: 10px;
-  padding-right: 20px;
-}
-.more-info{
-  width: 75%;
-  background-color: #fff;
-  margin-bottom: inherit;
-  padding: 0 8px;
-  float: right;
-  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19);
-  box-sizing: inherit;
-  line-height: 18px;
-
-}
-.about-me{
-  font-size: 16px !important;
-  color: #757575 !important;
-  background-color: #fff !important;
-  padding: 0.01em 16px;
-  margin-bottom: 15px;
-  line-height: 18px;
-}
-p.center a{
-  color: #009688;
-  text-decoration:none;
-}
-p.center a:visited{
-  color: #009688;
-}
-p.center a:hover{
-  text-decoration: underline;
-}
-.participate-list{
-  line-height: 1.4em;
-}
-ul.participate-list a{
-  color: #009688;
-  text-decoration: none;
-}
-ul.participate-list a:visited{
-  color: #009688;
-}
-ul.participate-list a:hover{
-  text-decoration: underline;
-}
-.fa-certificate{
-  color: #009688;
-}
-.image-card{
-  display: inline-grid;
-  width: 30%;
-  background-color: white;
-  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19);
-  margin-left: 5%;
-}
-.image-card-text{
-  text-align: center;
-  padding: 5px 20px;
-}
-.images{
-      position: relative;
-      float: left;
-      width:  260px;
-      height: 200px;
-      background-position: 50% 50%;
-}
-p.hobbies i{
-  color: #009688;
-}
-.workedu{
-  font-size: 16px !important;
-  color: #757575 !important;
-  background-color: #fff !important;
-  padding: 0.01em 16px;
-  margin-bottom: 15px;
-  line-height: 18px;
+html, body {
+    font-size: 15px;
+    line-height: 1.5;
 }
 
-.larger{
-  font-size: 38px !important;
+html, body, h1, h2, h3, h4, h5, h6 {
+    font-family: "Roboto", sans-serif;
 }
-div.venus h5{
-  font-weight: bold;
-  margin: 10px;
+
+.container {
+    margin: 16px 16px;
+    background-color: #fff;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
 }
-div.venus h6{
-  font-size: 16px;
-  margin: 0;
+
+.information-card {
+    width: 22%;
+    background-color: #fff;
+    margin-bottom: inherit;
+    float: left;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
+    box-sizing: inherit;
+    line-height: 18px;
 }
-div.military h5{
-  font-weight: bold;
-  margin: 10px;
+
+img {
+    width: 100%;
 }
-div.military h6{
-  font-size: 16px;
-  margin: 0;
+
+.information {
+    font-size: 15px !important;
+    color: #757575 !important;
+    background-color: #fff !important;
+    padding: 0.01em 16px;
+    margin-bottom: 15px;
+    line-height: 18px;
 }
-.university{
-  font-size: 1.1em;
+
+hr {
+    border-top: 1px solid #eee;
+    margin: 20px 0;
+    height: 0;
+    overflow: visible;
 }
-div.education h5{
-  font-weight: bold;
-  margin: 10px;
+
+.title {
+    font-size: 1.33333em;
+    font-weight: bold;
 }
-div.education h6{
-  font-size: 16px;
-  margin: 0;
+
+.background-percent {
+    color: #000 !important;
+    background-color: lightgray;
+    border-radius: 16px;
 }
-span{
-  background-color: #009688;
-  color: #fff;
-  border-radius: 3%;
+
+.html-css {
+    width: 90%;
+    background-color: #009688;
+    color: #fff !important;
+    border-radius: 16px;
+    text-align: center;
 }
-.footer-container{
-  text-align: center !important;
-  background-color: #009688 !important;
-  clear: both;
-  color: white !important;
-  margin-top: 16px !important;
-  padding: 0.01em 16px !important;
-  display: block;
+
+.c {
+    width: 80%;
+    background-color: #009688;
+    color: #fff !important;
+    border-radius: 16px;
+    text-align: center;
 }
-footer a{
-  color: #fff !important;
-  font-size: 16px !important;
+
+.mysql {
+    width: 80%;
+    background-color: #009688;
+    color: #fff !important;
+    border-radius: 16px;
+    text-align: center;
 }
-footer a:hover{
-  color: #f1f1f1 !important;
-  opacity: .7 !important;
+
+.java {
+    width: 75%;
+    background-color: #009688;
+    color: #fff !important;
+    border-radius: 16px;
+    text-align: center;
 }
+
+.php {
+    width: 60%;
+    background-color: #009688;
+    color: #fff !important;
+    border-radius: 16px;
+    text-align: center;
+}
+
+.python {
+    width: 50%;
+    background-color: #009688;
+    color: #fff !important;
+    border-radius: 16px;
+    text-align: center;
+}
+
+.language-greek {
+    width: 100%;
+    height: 18px;
+    border-radius: 16px;
+    background-color: #009688 !important;
+    line-height: 18px;
+}
+
+.language-english {
+    width: 75%;
+    height: 18px;
+    border-radius: 16px;
+    background-color: #009688 !important;
+}
+
+.info {
+    color: #009688;
+    font-size: 20px !important;
+    padding-left: 10px;
+    padding-right: 20px;
+}
+
+.more-info {
+    width: 75%;
+    background-color: #fff;
+    margin-bottom: inherit;
+    padding: 0 8px;
+    float: right;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
+    box-sizing: inherit;
+    line-height: 18px;
+}
+
+.about-me {
+    font-size: 16px !important;
+    color: #757575 !important;
+    background-color: #fff !important;
+    padding: 0.01em 16px;
+    margin-bottom: 15px;
+    line-height: 18px;
+}
+
+p.center a {
+    color: #009688;
+    text-decoration: none;
+}
+
+p.center a:visited {
+    color: #009688;
+}
+
+p.center a:hover {
+    text-decoration: underline;
+}
+
+.participate-list {
+    line-height: 1.4em;
+}
+
+ul.participate-list a {
+    color: #009688;
+    text-decoration: none;
+}
+
+ul.participate-list a:visited {
+    color: #009688;
+}
+
+ul.participate-list a:hover {
+    text-decoration: underline;
+}
+
+.fa-certificate {
+    color: #009688;
+}
+
+.image-card {
+    display: inline-grid;
+    width: 30%;
+    background-color: white;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-left: 5%;
+}
+
+.image-card-text {
+    text-align: center;
+    padding: 5px 20px;
+}
+
+.images {
+    position: relative;
+    float: left;
+    width: 260px;
+    height: 200px;
+    background-position: 50% 50%;
+}
+
+p.hobbies i {
+    color: #009688;
+}
+
+.workedu {
+    font-size: 16px !important;
+    color: #757575 !important;
+    background-color: #fff !important;
+    padding: 0.01em 16px;
+    margin-bottom: 15px;
+    line-height: 18px;
+}
+
+.larger {
+    font-size: 38px !important;
+}
+
+div.venus h5 {
+    font-weight: bold;
+    margin: 10px;
+}
+
+div.venus h6 {
+    font-size: 16px;
+    margin: 0;
+}
+
+div.military h5 {
+    font-weight: bold;
+    margin: 10px;
+}
+
+div.military h6 {
+    font-size: 16px;
+    margin: 0;
+}
+
+.university {
+    font-size: 1.1em;
+}
+
+div.education h5 {
+    font-weight: bold;
+    margin: 10px;
+}
+
+div.education h6 {
+    font-size: 16px;
+    margin: 0;
+}
+
+span {
+    background-color: #009688;
+    color: #fff;
+    border-radius: 3%;
+}
+
+.footer-container {
+    text-align: center !important;
+    background-color: #009688 !important;
+    clear: both;
+    color: white !important;
+    margin-top: 16px !important;
+    padding: 0.01em 16px !important;
+    display: block;
+}
+
+footer a {
+    color: #fff !important;
+    font-size: 16px !important;
+}
+
+footer a:hover {
+    color: #f1f1f1 !important;
+    opacity: .7 !important;
+}
+
 footer p {
-  line-height: 1.2px !important;
+    line-height: 1.2px !important;
 }
-*{
-  box-sizing:border-box;
+
+* {
+    box-sizing: border-box;
+}
+.background-percent div{
+     -webkit-transition: all 1s ease; /* Safari */
+    transition: all 1s ease; 
+}
+@media only screen and (max-width: 700px) {
+
+    .information-card{
+        width: 100%;
+    }
+    .more-info{
+        width: 100%;
+    }
+    
 }
